feat: docs for categories endpoints
